# certmate

./: .airgap.yml  .coverage  .dockerignore  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  API_TESTING.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_SUMMARY.md  BRUTAL_CODING.md  CA_PROVIDERS.md  CERTIFICATE_ARCHITECTURE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DNS_ANALYSIS_INDEX.md  DNS_PROVIDERS.md  DNS_PROVIDERS_QUICK_REFERENCE.txt  DNS_PROVIDER_ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  DOCKER_MULTIPLATFORM.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MODULAR_STRUCTURE.md  MULTI_ACCOUNT_EXAMPLES.md  MULTI_MASTER_DNS.md  Makefile  PHASE1_IMPRO.md  README.dockerhub.md  README.md  RELEASE_NOTES.md  SECURITY.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  app.py  build-docker.sh  build-multiplatform.sh  (+60 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-multiplatform.yml  e2e-staging.yml  lint-emoji.yml  publish-clients.yml  scorecard.yml  ui-tests.yml
clients/: README.md
clients/certmate-cli/: README.md  pyproject.toml
clients/certmate-cli/certmate_cli/: __init__.py  main.py
clients/certmate-sdk/: README.md  pyproject.toml
clients/certmate-sdk/certmate/: __init__.py  client.py  errors.py  models.py
demo/: README.md  certmate-cli.tape
docs/: CHANGELOG.md  README.md  THEME_MIGRATION.md  api.md  architecture.md  ca-providers.md  compliance.md  deploy-hooks.md  dns-providers.md  docker.md  guide.md  index.md  installation.md  kubernetes.md  mcp.md  probes.en.md  testing.md
docs/de/: README.md  THEME_MIGRATION.md  api.md  architecture.md  ca-providers.md  compliance.md  deploy-hooks.md  dns-providers.md  docker.md  guide.md  index.md  installation.md  kubernetes.md  mcp.md  probes.md  testing.md
docs/es/: README.md  THEME_MIGRATION.md  api.md  architecture.md  ca-providers.md  compliance.md  deploy-hooks.md  dns-providers.md  docker.md  guide.md  index.md  installation.md  kubernetes.md  mcp.md  probes.md  testing.md
docs/fr/: README.md  THEME_MIGRATION.md  api.md  architecture.md  ca-providers.md  compliance.md  deploy-hooks.md  dns-providers.md  docker.md  guide.md  index.md  installation.md  kubernetes.md  mcp.md  probes.md  testing.md
docs/it/: README.md  THEME_MIGRATION.md  api.md  architecture.md  ca-providers.md  compliance.md  deploy-hooks.md  dns-providers.md  docker.md  guide.md  index.md  installation.md  kubernetes.md  mcp.md  probes.md  testing.md
mcp/: index.js  package-lock.json  package.json  test-smoke.js  test-tools.js
modules/: __init__.py  metrics.py  utils.py
modules/api/: __init__.py  client_certificates.py  models.py  resources.py
modules/core/: __init__.py  audit.py  audit_chain.py  audit_context.py  audit_prune.py  audit_signing.py  audit_verify.py  auth.py  ca_manager.py  cache.py  cert_jobs.py  cert_service.py  certificates.py  client_certificates.py  constants.py  csr_handler.py  deployer.py  digest.py  dns_alias_hook.py  dns_providers.py  dns_strategies.py  dns_zone_discovery.py  events.py  factory.py  file_operations.py  metrics.py  notifier.py  ocsp_crl.py  oidc.py  private_ca.py  rate_limit.py  settings.py  shell.py  storage_backends.py  structured_logging.py  utils.py  zombie.py
modules/web/: __init__.py  auth_routes.py  backup_cache_routes.py  cert_routes.py  misc_routes.py  (+4 more)
monitoring/: README.md  grafana-dashboard.json  prometheus-alerts.yml  prometheus-scrape.example.yml
scripts/: release.sh  reset_admin_password.py  solidserver_hook.py  theme_baseline.py  theme_codemod.py
static/: manifest.json
templates/: 403.html  activity.html  base.html  client-certificates.html  help.html  index.html  login.html  notifications.html  redoc.html  settings.html  setup.html
tests/: __init__.py  conftest.py  e2e_support.py  run_tests.sh  test_acme_challenge_serving.py  test_agentic_audit_trail.py  test_api.py  test_api_key_expiry_and_masking.py  test_apikey_scope_escalation.py  test_apikeys.py  test_app.py  test_async_issuance.py  test_async_issuance_e2e.py  test_audit.py  test_audit_backup_hardening.py  test_audit_certbot_stderr_sanitizer.py  test_audit_chain.py  test_audit_chain_streaming.py  test_audit_checkpoint_crosscheck.py  test_audit_client_cert_rbac.py  test_audit_domain_validation_gaps.py  test_audit_export_slice_anchor.py  test_audit_hardening.py  test_audit_log_rotation.py  test_audit_notifications_and_acmedns_masking.py  test_audit_phase3.py  test_audit_prune.py  test_audit_scope_filters.py  test_audit_settings_mutating_routes.py  test_auth.py  test_auth_manager_coverage.py  test_auth_me_bypass.py  test_auth_setup_mode.py  test_authentication.py  test_azure_dns_credentials_format.py  test_azure_keyvault_certificate_storage.py  test_backup.py  test_backup_encryption.py  test_backup_excludes_certbot_scratch.py  test_backup_includes_pki_and_audit.py  (+158 more)
(+30 files in other folders)
